--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
 </head>
 
 <body>
@@ -25,6 +26,7 @@
             <tbody>
             </tbody>
         </table>
+        <div id="googleMap" style="width:500px;height:380px;"></div>
     </div>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
